# clop

./: CMakeLists.txt  README.md  clop.csd  clopf.csd  ocl.h  opcode.cpp
